--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
 
       <input type="button" value="Login" onClick="openPage('login.jsp')" />
 
+    <br />
+
      
+    <h3>Go to Migration page...</h3>
+
+      <input type="button" value="Migration" onClick="openPage('Migration.jsp')" />
+      
  
     <script type="text/javascript">
 
